tests/samples/positive/pointers/ptr_from_addr_wide_literal.ax
module ptr_from_addr_wide_literal;

fn main() -> i32 {
    let pointer: *const i32 = ptr_from_addr(*const i32, 4294967296);
    if ptr_addr(pointer) == cast(usize, 0) {
        return 1;
    }
    return 0;
}
