tests/samples/negative/pointers/ptr_addr_non_pointer.ax
module ptr_addr_non_pointer;

fn main() -> i32 {
    let value: i32 = 1;
    let addr: usize = ptraddr(value);
    return cast<i32>(addr);
}
